<resources>
    <string name="app_name">Eleições</string>
    <string name="erro_login">Poxa não foi dessa vez, alguma coisa ta errada :(</string>
    <string name="campo_obrigatorio">Preencha os campos obrigatórios</string>
    <string name="confimacao_campo">Os campos não conferem</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_resultados">Resultados</string>
    <string name="menu_relatorios">Relatórios</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_sair">Sair</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
</resources>
