<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pesquisar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pesquisar" />
        <item
            android:id="@+id/nav_resultados"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_resultados" />
        <item
            android:id="@+id/nav_relatorios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_relatorios" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_sair" />
    </group>
</menu>
