<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.integrador.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.integrador.ui.home.HomeSecondFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_sair"
        android:name="com.example.integrador.ui.action.Sair"
        android:label="@string/home_second">
    </fragment>

    <fragment
        android:id="@+id/nav_pesquisar"
        android:name="com.example.integrador.ui.pesquisar.PesquisarFragment"
        android:label="@string/menu_pesquisar"
        tools:layout="@layout/fragment_pesquisar" />

    <fragment
        android:id="@+id/nav_resultados"
        android:name="com.example.integrador.ui.resultados.ResultadosFragment"
        android:label="@string/menu_resultados"
        tools:layout="@layout/fragment_resultados" />

    <fragment
        android:id="@+id/nav_relatorios"
        android:name="com.example.integrador.ui.relatorios.RelatoriosFragment"
        android:label="@string/menu_relatorios"
        tools:layout="@layout/fragment_relatorios" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.integrador.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />
</navigation>